...
        android:elevation="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/txt_hours"
        app:layout_constraintTop_toBottomOf="@+id/txt_hours">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="122dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_cancel"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:padding="6dp"
            android:text="CANCEL"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
