...
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="40dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
...
