...
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.271"
        app:srcCompat="@drawable/small_marker"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/btn_aquatics"
        android:layout_width="39dp"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/aquamarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
...
